[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/LoadMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="LoadMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.000662613
anchor_top = -0.00117804
anchor_right = 0.000662613
anchor_bottom = -0.00117804
margin_left = 7.78796
margin_top = 24.212
margin_right = 327.788
margin_bottom = 46.212
custom_fonts/font = SubResource( 1 )
text = "_type_your_name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -84.0
margin_right = 56.0
margin_bottom = -56.0
custom_fonts/font = SubResource( 2 )
text = "_start_playing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -180.0
margin_right = -112.0
margin_bottom = -158.0
custom_fonts/font = SubResource( 4 )
text = "_back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 40.4771
margin_top = 56.0
margin_right = 284.477
margin_bottom = 88.0
custom_fonts/font = SubResource( 3 )
max_length = 15
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
